--- a/src/assets/sass/commons/content.scss
+++ b/src/assets/sass/commons/content.scss
@@ -66,7 +66,7 @@
 			}
 		}
 		&-text{
-			font-weight: 700;
+			font-weight: 400;
 		}
 		&-footer{
 			border: none;
